Fix post text align property

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -16,3 +16,7 @@
   display: flex;
   justify-content: space-between;
 }
+
+.post {
+  text-align: justify;
+}
